# molsys-ai-server

./: .buildinfo  .gitignore  AGENTS.md  GEMINI.md  README.md  checkpoint.md  environment.yml  genindex.html  getting_started.html  healthy_vllm_env.md  index.html  launch_notes.md  modules.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.github/workflows/: sphinx_docs_to_gh_pages.yaml
_sources/: getting_started.md.txt  modules.rst.txt
agent/: README.md  __init__.py  core.py  executor.py  model_client.py  planner.py
agent/tools/: __init__.py  molsysmt_tools.py
cli/: README.md  main.py
client/agent/: README.md  __init__.py  executor.py  model_client.py  notebook.py  planner.py
client/cli/: README.md  config.py  http_api.py  main.py
dev/: AGENT_EVOLUTION.md  API_CONTRACT_V1.md  ARCHITECTURE.md  BENCHMARKING.md  CONSTRAINTS.md  Caddyfile.example  DEPLOY_API.md  DEV_GUIDE.md  FIREWALL_PORT_REQUEST_TEMPLATE.md  NOTEBOOKS.md  OPEN_QUESTIONS.md  README_GETTING_STARTED_SNIPPET.md  ROADMAP.md  RUNBOOK_DEPLOY_443.md  RUNBOOK_VLLM.md  audit_notebook_recipes.py  audit_rag_corpus.py  corpus_config.toml.example  digest_recipes_llm.py  molsys-ai.env.example  refresh_rag_full.sh  run_chat_api.sh  run_model_server.sh  smoke_chat_inprocess.py  smoke_docs_chat_inprocess.py  smoke_vllm.sh  smoke_widget.sh  sync_rag_corpus.py  warmup_engine.sh
dev/benchmarks/: README.md  questions_v0.jsonl  questions_v0.sample.jsonl  run_chat_bench.py  run_gate.sh  sweep_retrieval_weights.py  view_run.py
dev/decisions/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md  ADR-018.md  ADR-019.md  ADR-020.md  ADR-021.md
dev/systemd/: molsys-ai-chat-api.service.example  molsys-ai-docs-chat.service.example  molsys-ai-model.service.example  molsys-ai-rag-refresh.service.example  molsys-ai-rag-refresh.timer.example
docs/: conf.py  index.md
docs/_static/: molsys_ai_config.js  molsys_ai_pilot.css
docs_chat/: README.md  __init__.py  backend.py
model_server/: README.md  __init__.py  config.example.yaml  server.py
rag/: README.md  __init__.py  build_index.py  embeddings.py  retriever.py
scripts/: launch_chatbot_api.sh  launch_model_server.sh  test_from_remote_terminal.sh  test_health.sh
server/chat_api/: README.md  __init__.py  backend.py
server/docs_chat/: README.md  backend.py
server/model_server/: README.md  config.example.yaml  server.py
server/rag/: README.md  bm25.py  build_index.py  embeddings.py  retriever.py
server/web_widget/: molsys_ai_widget.js
tests/: conftest.py  test_api_auth.py  test_smoke.py  test_symbol_verification.py
train/: README.md
train/configs/: README.md
train/data/: README.md
train/jobs/: README.md
train/notebooks/: README.md
train/scripts/: __init__.py  train_lora.py
web_widget/: molsys_ai_widget.js
(+5 files in other folders)
