[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsys-ai"
version = "0.1.0"
description = "MolSys-AI: an AI assistant for the UIBCDF MolSysSuite tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "UIBCDF" }
]
dependencies = [
  "requests",
]

[project.optional-dependencies]
cli = [
  "rich",
]
server = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "PyYAML",
  "numpy",
]
rag = [
  "numpy",
  "sentence-transformers",
]
docs = [
  "sphinx",
  "myst-nb",
  "pydata-sphinx-theme",
]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
  "rich",
  "fastapi",
  "uvicorn",
  "pydantic",
  "PyYAML",
  "numpy",
  "sentence-transformers",
  "sphinx",
  "myst-nb",
  "pydata-sphinx-theme",
]
all = [
  "rich",
  "fastapi",
  "uvicorn",
  "pydantic",
  "PyYAML",
  "numpy",
  "sentence-transformers",
  "sphinx",
  "myst-nb",
  "pydata-sphinx-theme",
]

[project.scripts]
molsys-ai = "cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["client", "server"]
include = [
  "agent",
  "agent.*",
  "cli",
  "model_server",
  "rag",
  "chat_api",
]
